--- a/naunet/templates/odeint/include/naunet_physics.h.j2
+++ b/naunet/templates/odeint/include/naunet_physics.h.j2
@@ -3,7 +3,8 @@
 
 double mantles(double *y);
 
-double shieldingfactor(int specidx, double h2coldens, double spcoldens, double tgas, int method);
+double shieldingfactor(int specidx, double h2coldens, double spcoldens,
+                       double tgas, int method);
 
 double H2shielding(double coldens, int method);
 
